--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Appointment Scheduler</title>
+       <style>
+
+        table {
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 100%;
+        }
+
+        td, th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+    </style>
 </head>
 <body>
 
