--- a/templates/main/physician/create_physician.html
+++ b/templates/main/physician/create_physician.html
@@ -5,7 +5,7 @@
         {{ error }}
     {% endif %}
     <hr>
-    <form action="{% url 'physician' %}" method="post">
+    <form action="{% url 'add_physician' %}" method="post">
 
         {% csrf_token %}
         <label for="first_name">Physician First Name:</label>
@@ -23,6 +23,11 @@
 
         <button type="submit">ADD PHYSICIAN</button>
         <hr>
-        <a href="{% url 'home' %}">LOGOUT</a>
+        <ul>
+            <li><a href="{% url 'list_physician' %}">View Physicians</a></li>
+            <li> <a href="{% url 'home' %}">LOGOUT</a></li>
+        </ul>
+
+
     </form>
 {% endblock %}
