added the acceptance test for physician creation

--- a/templates/main/physician/create_physician.html
+++ b/templates/main/physician/create_physician.html
@@ -23,6 +23,7 @@
 
         <button type="submit">ADD PHYSICIAN</button>
         <hr>
+         {{ message }}
         <ul>
             <li><a href="{% url 'list_physician' %}">View Physicians</a></li>
             <li> <a href="{% url 'home' %}">LOGOUT</a></li>
